--- a/src/locales/menu_static.json
+++ b/src/locales/menu_static.json
@@ -1,9 +1,15 @@
 {
     "hot_drinks": {},
     "cold_drinks": {},
-    "hot_coffees": {},
-    "hot_teas": {},
-    "ronnefeldt_world_tea": {},
+    "hot_coffees": {
+        "picture": "menu_pics/hot_coffees.webp"
+    },
+    "hot_teas": {
+        "picture": "menu_pics/hot_teas.webp"
+    },
+    "ronnefeldt_world_tea": {
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
+    },
     "other_hot_drinks": {},
     "cold_coffees": {},
     "other_cold_drinks": {},
@@ -20,54 +26,66 @@
     "espresso": {
         "small_price": 65,
         "medium_price": 70,
-        "picture": "menu_pics/espresso.webp"
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "lungo": {
         "medium_price": 75,
-        "large_price": 90
+        "large_price": 90,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "espresso_con_panna": {
-        "medium_price": 65
+        "medium_price": 65,
+        "picture": "menu_pics/espresso_con_panna.webp"
     },
     "americano": {
         "medium_price": 85,
-        "large_price": 100
+        "large_price": 100,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "dark_americano": {
         "medium_price": 90,
-        "large_price": 105
+        "large_price": 105,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "cortado": {
         "medium_price": 75,
-        "large_price": 90
+        "large_price": 90,
+        "picture": "menu_pics/cortado.webp"
     },
     "red_eye": {
         "medium_price": 85,
-        "large_price": 100
+        "large_price": 100,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "black_eye": {
         "medium_price": 95,
-        "large_price": 110
+        "large_price": 110,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "cappuccino": {
         "medium_price": 90,
-        "large_price": 105
+        "large_price": 105,
+        "picture": "menu_pics/cappuccino.webp"
     },
     "flat_white": {
         "medium_price": 90,
-        "large_price": 105
+        "large_price": 105,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "latte_macchiato": {
         "medium_price": 90,
-        "large_price": 105
+        "large_price": 105,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "mocha": {
         "medium_price": 100,
-        "large_price": 115
+        "large_price": 115,
+        "picture": "menu_pics/mocha.webp"
     },
     "white_chocolate_mocha": {
         "medium_price": 100,
-        "large_price": 115
+        "large_price": 115,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "latte": {
         "medium_price": 90,
@@ -81,92 +99,114 @@
     },
     "turkish_coffee": {
         "small_price": 55,
-        "medium_price": 65
+        "medium_price": 65,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "decaffeinated_turkish_coffee": {
         "small_price": 65,
-        "medium_price": 70
+        "medium_price": 70,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "dibek_turkish_coffee__(harput_coffee)": {
         "small_price": 65,
-        "medium_price": 70
+        "medium_price": 70,
+        "picture": "menu_pics/hot_coffees.webp"
     },
     "black_tea": {
         "small_price": 30,
         "medium_price": 40,
-        "large_price": 60
+        "large_price": 60,
+        "picture": "menu_pics/black_tea.webp"
     },
     "linden": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "sage": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "mint_lemon_tea": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "green_tea": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "mint_green_tea": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "detox_tea": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "dream_tea": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/hot_teas.webp"
     },
     "blue_butterfly_tea": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/blue_butterfly_tea.webp"
     },
     "rooibos_cream_orange": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "ayurveda_herbs_&_ginger": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "tropical_sun": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "irish_whsiky-cream": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "masalia_chai": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "white_yin_long": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "morgentau": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "lychee_&_goji": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "jasmine_pearls": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "huckleberry_find": {
         "medium_price": 75,
-        "large_price": 85
+        "large_price": 85,
+        "picture": "menu_pics/ronnefeldt_world_tea.webp"
     },
     "hot_chocolate": {
         "medium_price": 90
@@ -192,7 +232,8 @@
     },
     "iced_americano": {
         "medium_price": 90,
-        "large_price": 105
+        "large_price": 105,
+        "picture": "menu_pics/iced_americano.webp"
     },
     "iced_cappuccino": {
         "medium_price": 95,
@@ -231,8 +272,9 @@
     "frozen": {
         "large_price": 120
     },
-    "i̇talyan_sodası": {
-        "large_price": 80
+    "italyan_sodas": {
+        "large_price": 80,
+        "picture": "menu_pics/italyan_sodas.webp"
     },
     "iced_matcha_latte": {
         "large_price": 90
@@ -266,7 +308,8 @@
         "picture": "menu_pics/bubble_tea.webp"
     },
     "lemonade_(homemade)": {
-        "large_price": 95
+        "large_price": 95,
+        "picture": "menu_pics/lemonade_(homemade).webp"
     },
     "black_mulberry__(homemade)": {
         "large_price": 95
@@ -278,13 +321,16 @@
         "medium_price": 60
     },
     "naren_(katkısız_meyve_suları)": {
-        "medium_price": 60
+        "medium_price": 60,
+        "picture": "menu_pics/naren_(katkısız_meyve_suları).webp"
     },
     "naren_fruizy_(katkısız_meyve_suları)": {
-        "medium_price": 75
+        "medium_price": 75,
+        "picture": "menu_pics/naren_fruizy_(katkısız_meyve_suları).webp"
     },
     "soda_types": {
-        "medium_price": 60
+        "medium_price": 60,
+        "picture": "menu_pics/soda_types.webp"
     },
     "plain_soda_": {
         "medium_price": 35
@@ -298,8 +344,9 @@
     "water_(glas_bottle)": {
         "medium_price": 20
     },
-    "cheescake": {
-        "medium_price": 125
+    "cheesecake": {
+        "medium_price": 155,
+        "picture": "menu_pics/cheesecake.webp"
     },
     "mosaic_cake": {
         "medium_price": 125
@@ -326,10 +373,8 @@
         "medium_price": 70
     },
     "berliner": {
-        "medium_price": 70
-    },
-    "chees_cake": {
-        "medium_price": 155
+        "medium_price": 70,
+        "picture": "menu_pics/berliner.webp"
     },
     "browni": {
         "medium_price": 155
@@ -338,7 +383,8 @@
         "medium_price": 155
     },
     "san_sebastian_(spain)": {
-        "medium_price": 175
+        "medium_price": 175,
+        "picture": "menu_pics/san_sebastian_(spain).webp"
     },
     "karpatka_(polonya)_": {
         "medium_price": 155
@@ -362,13 +408,15 @@
         "medium_price": 155
     },
     "mochi_(japan)": {
-        "medium_price": 75
+        "medium_price": 75,
+        "picture": "menu_pics/mochi_(japan).webp"
     },
     "pastel_de_nata_(portugal)": {
         "medium_price": 55
     },
     "fruit_cakes": {
-        "medium_price": 155
+        "medium_price": 155,
+        "picture": "menu_pics/fruit_cakes.webp"
     },
     "cake_world": {
         "medium_price": 115
@@ -377,7 +425,8 @@
         "medium_price": 65
     },
     "tiramisu": {
-        "medium_price": 155
+        "medium_price": 155,
+        "picture": "menu_pics/tiramisu.webp"
     },
     "types_of_pies_(slice)": {
         "medium_price": 155
@@ -392,46 +441,54 @@
         "medium_price": 135
     },
     "pudding_world": {
-        "medium_price": 135
+        "medium_price": 135,
+        "picture": "menu_pics/pudding_world.webp"
     },
     "ashura": {
         "medium_price": 135
     },
-    "croissant_(planin)": {
+    "croissant_(plain)": {
         "medium_price": 80
     },
     "croissant_(chocolate)": {
         "medium_price": 100
     },
-    "croissant_big_(planin)_": {
+    "croissant_big_(plain)_": {
         "medium_price": 100
     },
     "croissant_three_cheese": {
         "medium_price": 150
     },
     "croissant_with_veal_ham": {
-        "medium_price": 150
+        "medium_price": 150,
+        "picture": "menu_pics/croissant_with_veal_ham.webp"
     },
     "world_of_roll_pastry": {
-        "medium_price": 80
+        "medium_price": 80,
+        "picture": "menu_pics/world_of_roll_pastry.webp"
     },
     "herb_cheese_pastry": {
         "medium_price": 80
     },
     "breakfast_plate": {
-        "medium_price": 195
+        "medium_price": 195,
+        "picture": "menu_pics/breakfast_plate.webp"
     },
-    "toast_-1": {
-        "medium_price": 120
+    "toast-1": {
+        "medium_price": 120,
+        "picture": "menu_pics/toast-1.webp"
     },
-    "toast-_2": {
-        "medium_price": 130
+    "toast-2": {
+        "medium_price": 130,
+        "picture": "menu_pics/toast-2.webp"
     },
-    "sandwich_-1": {
-        "medium_price": 130
+    "sandwich-1": {
+        "medium_price": 130,
+        "picture": "menu_pics/sandwich-1.webp"
     },
-    "sandwich_-2": {
-        "medium_price": 130
+    "sandwich-2": {
+        "medium_price": 130,
+        "picture": "menu_pics/sandwich-2.webp"
     },
     "fruit_salad": {
         "medium_price": 115,
