--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -112,8 +112,8 @@
             "browni",
             "magnolia_cake",
             "san_sebastian_(spain)",
-            "karpatka_(polonya)_",
-            "medovik_(_rusya)",
+            "karpatka_(poland)",
+            "medovik_(russia)",
             "schwarzwälder_kirschtorte_(germany)",
             "käsesahne_torte_(germany)",
             "bienenstich_cake_(germany)",
