--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -323,11 +323,11 @@
     "san_sebastian_(spain)": {
         "name": "San Sebastian (Spain)"
     },
-    "karpatka_(polonya)_": {
-        "name": "Karpatka (Polonya) "
+    "karpatka_(poland)": {
+        "name": "Karpatka (Poland)"
     },
-    "medovik_(_rusya)": {
-        "name": "Medovik ( Rusya)"
+    "medovik_(russia)": {
+        "name": "Medovik (Russia)"
     },
     "schwarzwälder_kirschtorte_(germany)": {
         "name": "Schwarzwälder Kirschtorte (Germany)"
