--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -323,10 +323,10 @@
     "san_sebastian_(spain)": {
         "name": "San Sebastian (İspanya)"
     },
-    "karpatka_(polonya)_": {
+    "karpatka_(poland)": {
         "name": "Karpatka (Polonya) "
     },
-    "medovik_(_rusya)": {
+    "medovik_(russia)": {
         "name": "Medovik ( Rusya)"
     },
     "schwarzwälder_kirschtorte_(germany)": {
