lotus cheesecake added

--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -108,6 +108,7 @@
         ],
         "homemade_sweets_(please_ask_for_daily_cakes)": [
             "cheesecake",
+            "lotus_cheescake",
             "browni",
             "magnolia_cake",
             "san_sebastian_(spain)",
