--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -312,6 +312,9 @@
     "berliner": {
         "name": "Berliner"
     },
+    "lotus_cheescake": {
+        "name": "Lotus Cheescake"
+    },
     "browni": {
         "name": "Browni"
     },
