--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -311,6 +311,9 @@
     "berliner": {
         "name": "Berliner"
     },
+    "lotus_cheescake": {
+        "name": "Lotuslu Chees Cake"
+    },
     "browni": {
         "name": "Browni"
     },
