--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -312,8 +312,8 @@
     "berliner": {
         "name": "Berliner"
     },
-    "lotus_cheescake": {
-        "name": "Lotus Cheescake"
+    "lotus_cheesecake": {
+        "name": "Lotus Cheesecake"
     },
     "browni": {
         "name": "Browni"
