--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -311,7 +311,7 @@
     "berliner": {
         "name": "Berliner"
     },
-    "lotus_cheescake": {
+    "lotus_cheesecake": {
         "name": "Lotuslu Chees Cake"
     },
     "browni": {
