--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -108,7 +108,7 @@
         ],
         "homemade_sweets_(please_ask_for_daily_cakes)": [
             "cheesecake",
-            "lotus_cheescake",
+            "lotus_cheesecake",
             "browni",
             "magnolia_cake",
             "san_sebastian_(spain)",
