cold brew added

--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -60,7 +60,8 @@
             "iced_white_chocolate_mocha",
             "iced_latte",
             "iced_red_eye",
-            "iced_black_eye"
+            "iced_black_eye",
+            "cold_brew"
         ],
         "other_cold_drinks": [
             "milkshake",
