--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -204,6 +204,9 @@
     "iced_black_eye": {
         "name": "Iced Black Eye"
     },
+    "cold_brew": {
+        "name": "Cold Brew"
+    },
     "milkshake": {
         "name": "Milkshake"
     },
