--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -203,6 +203,9 @@
     "iced_black_eye": {
         "name": "Iced Black Eye"
     },
+    "cold_brew": {
+        "name": "Cold Brew"
+    },
     "milkshake": {
         "name": "Milkshake"
     },
