--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -81,6 +81,7 @@
             "bubble_tea",
             "lemonade_(homemade)",
             "black_mulberry__(homemade)",
+            "fresh_squeezed_orange_juice",
             "cool_lime"
         ],
         "softdrinks": [
