--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -258,6 +258,9 @@
     "black_mulberry__(homemade)": {
         "name": "Black Mulberry  (HOMEMADE)"
     },
+    "fresh_squeezed_orange_juice": {
+        "name": "Fresh squeezed orange juice"
+    },
     "cool_lime": {
         "name": "Cool Lime"
     },
