--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -257,6 +257,9 @@
     "black_mulberry__(homemade)": {
         "name": "Karadut (EV YAPIMI)"
     },
+    "fresh_squeezed_orange_juice": {
+        "name": "Sıkma Portakal suyu"
+    },
     "cool_lime": {
         "name": "Cool Lime"
     },
